<?xml version="1.0"?>
<package format="2">
  <name>coppeliasim_ros_launcher</name>
  <version>0.1.0</version>
  <description>A simple package to launch Coppelia Sim as a ROS node</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export/>
</package>
